--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,22 +1,52 @@
 @import url("https://rsms.me/inter/inter.css");
 
+:root {
+  --grey-100: #f7fafc;
+  --grey-200: #edf2f7;
+  --grey-300: #e2e8f0;
+  --grey-400: #cbd5e0;
+  --grey-500: #a0aec0;
+  --grey-600: #718096;
+  --grey-700: #4a5568;
+  --grey-800: #2d3748;
+  --grey-900: #1a202c;
+
+  --small-radius: 5px;
+  --medium-radius: 10px;
+
+  --m-1: 0.25rem;
+  --m-2: 0.5rem; /* 8px */
+  --m-3: 0.75rem;
+  --m-4: 1rem; /* 16px */
+  --m-5: 1.5rem;
+  --m-6: 2rem; /* 32 px */
+  --m-7: 3rem;
+  --m-8: 4rem;
+
+  --text-xs: 0.75rem;
+  --text-sm: 0.875rem;
+  --text-base: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
+  --text-3xl: 1.875rem;
+  --text-4xl: 2.25rem;
+  --text-5xl: 3rem;
+
+  --shadow-small: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-medium: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
 html {
   font-family: "Inter", sans-serif;
-  font-size: 62.5%;
 }
 
 @supports (font-variation-settings: normal) {
   html {
     font-family: "Inter var", sans-serif;
-  }
-}
-
-[data-reach-dialog-content] {
-  width: 40vw;
-}
-
-@media screen and (max-width: 768px) {
-  [data-reach-dialog-content] {
-    width: 75vw;
   }
 }
